--- a/public/monaco-editor/index.html
+++ b/public/monaco-editor/index.html
@@ -20,38 +20,53 @@
     <div id="container"></div>
 
     <script>
-        window.initialCode = 'console.log("Hello from React Native")';
-
-        require.config({ paths: { vs: '.' } });
-        require(['vs/editor/editor.main'], function ()
-        {
-            const editor = monaco.editor.create(document.getElementById('container'), {
-                value: window.initialCode,
-                language: 'javascript',
-                theme: 'vs-dark'
-            });
-
-            editor.onDidChangeModelContent(() =>
+        require.config(
             {
-                const code = editor.getValue();
-                window.ReactNativeWebView?.postMessage(JSON.stringify({ type: 'codeChange', code }));
-            });
-
-            window.addEventListener('message', (event) =>
+                paths: { vs: '.' }
+            }
+        );
+        require(
+            ['vs/editor/editor.main'],
+            function ()
             {
-                try
-                {
-                    const msg = JSON.parse(event.data);
-                    if (msg.type === 'setCode' && msg.code)
+                const editor = monaco.editor.create(
+                    document.getElementById('container'),
                     {
-                        editor.setValue(msg.code);
+                        value: window.code,
+                        language: 'javascript',
+                        theme: 'vs-dark'
                     }
-                } catch (err)
+                );
+
+                editor.onDidChangeModelContent(() =>
                 {
-                    console.error(err);
-                }
+                    const code = editor.getValue();
+
+                    window.parent?.postMessage(
+                        JSON.stringify(
+                            {
+                                type: 'codeChange',
+                                code
+                            }
+                        )
+                    );
+                });
+
+                window.addEventListener('message', (event) =>
+                {
+                    try
+                    {
+                        const msg = JSON.parse(event.data);
+                        if (msg.type === 'setCode' && msg.code)
+                        {
+                            editor.setValue(msg.code);
+                        }
+                    } catch (err)
+                    {
+                        console.error(err);
+                    }
+                });
             });
-        });
     </script>
 </body>
 
